# tensorflow_opengl_interop

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/Modules/: Eigen_VERSION.cmake  FindGLFW3.cmake  Protobuf_VERSION.cmake
src/: OfflineDataLoader.h  custom_ops.h  gl_wrappers.h  simple_blend_network.cc
src/custom_ops/: CopyToFramebufferOp.cc  CopyToFramebufferOp.cu  CopyToFramebufferOp.h  CopyToTextureOp.cc  CopyToTextureOp.cu  CopyToTextureOp.h  CudaBilinearUpsampleOp.cc  CudaBilinearUpsampleOp.cu  CudaBilinearUpsampleOp.h  CudaNNUpsampleOp.cc  CudaNNUpsampleOp.cu  CudaNNUpsampleOp.h  TextureInputOp.cc  TextureInputOp.cu  TextureInputOp.h
src/gl_wrappers/: enumerations.cpp  enumerations.h  framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  texture.cpp  texture.h
